--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   google_sign_in: ^5.1.0
   googleapis: ^7.0.0
   http: ^0.13.3
+  riverpod: ^1.0.3
+  flutter_riverpod: ^1.0.3
+  cloud_firestore: ^3.1.5
+  firebase_storage: ^10.2.4
 
 dev_dependencies:
   flutter_test:
