--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_riverpod: ^1.0.3
   cloud_firestore: ^3.1.5
   firebase_storage: ^10.2.4
+  firebase_messaging: ^11.2.4
+  flutter_local_notifications: ^9.2.0
 
 dev_dependencies:
   flutter_test:
