--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   flutter_local_notifications: ^9.2.0
   freezed: ^1.1.1
   freezed_annotation: ^1.1.0
-  auto_route: ^3.2.2
+  auto_route: ^3.2.1
 
 dev_dependencies:
+  auto_route_generator: ^3.2.1
   build_runner: ^2.1.7
   fimber: ^0.6.5
   flutter_test:
