--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   flutter_local_notifications: ^9.2.0
   freezed: ^1.1.1
   freezed_annotation: ^1.1.0
-  auto_route: ^3.2.1
+  auto_route: ^3.2.2
+  json_serializable: ^6.1.4
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
