--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   freezed_annotation: ^1.1.0
   auto_route: ^3.2.2
   json_serializable: ^6.1.4
+  go_router: ^3.0.2
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
