--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   auto_route: ^3.2.2
   json_serializable: ^6.1.4
   go_router: ^3.0.2
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
