--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   json_serializable: ^6.1.4
   go_router: ^3.0.2
   flutter_signin_button: ^2.0.0
+  home_widget: ^0.1.5
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
