--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   go_router: ^3.0.2
   flutter_signin_button: ^2.0.0
   home_widget: ^0.1.5
+  hexcolor: ^2.0.7
+  sleek_circular_slider: ^2.0.1
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
