--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   home_widget: ^0.1.5
   hexcolor: ^2.0.7
   sleek_circular_slider: ^2.0.1
+  pie_chart: ^5.3.1
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
