--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   hexcolor: ^2.0.7
   sleek_circular_slider: ^2.0.1
   pie_chart: ^5.3.1
+  d_chart: ^0.0.4
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
