fix: flutter upgrade from 2 to 3

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
         android:label="task_manager"
         android:icon="@mipmap/ic_launcher">
         <activity
+            android:exported="true"
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
@@ -37,12 +38,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-       <receiver android:name="WidgetProvider" >
-           <intent-filter>
-               <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-           </intent-filter>
-           <meta-data android:name="android.appwidget.provider"
-               android:resource="@xml/widget_info" />
-       </receiver>
+
     </application>
 </manifest>
